--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
+  port: <%= ENV['DATABASE_PORT'] || 5432 %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['DATABASE_USER'] || 'postgres' %>
+  password: <%= ENV['DATABASE_PASSWORD'] || 'postgres' %>
 
 development:
   <<: *default
@@ -10,9 +14,3 @@ development:
 test:
   <<: *default
   database: outboxer_app_test
-
-# production:
-#   <<: *default
-#   database: outboxer_app_production
-#   username: your_username
-#   password: your_password
