--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@ default: &default
 
 development:
   <<: *default
-  database: outboxer_app_development
+  database: accountify_development
 
 test:
   <<: *default
-  database: outboxer_app_test
+  database: accountify_test
